...
          const VerticalSpacer(),
          if (artworkDetail.artistDisplay != null) ...[
            Text(artworkDetail.artistDisplay!),
            const VerticalSpacer(20),
          ],
          if (artworkDetail.dimensions != null) ...[
            const Text('Dimensions', style: TextStyle(fontSize: 18)),
            const VerticalSpacer(),
            Text(artworkDetail.dimensions!),
            const VerticalSpacer(20),
          ],
          const Text('Description', style: TextStyle(fontSize: 18)),
          const VerticalSpacer(),
...
