...
import 'package:flutter/material.dart';

class ArtworkTile extends StatelessWidget {
  const ArtworkTile({
    super.key,
    required this.artwork,
    this.semanticLabel = 'artworkTile'
  });

  final Artwork artwork;
  final String semanticLabel;

  @override
...
