appId: com.alejandrorios.art_catalog_app
onFlowComplete:
  - stopApp
  - clearState
---
- launchApp:
    permissions:
      notifications: allow
- waitForAnimationToEnd
- assertVisible: .*Home.*
- assertVisible:
    text: .*artworkTile.*
    index: 0
- tapOn: .*Favorites.*
- waitForAnimationToEnd
- assertVisible: "No favorites yet"
- tapOn: .*Home.*
- tapOn:
    text: .*artworkTile.*
    index: 0
- waitForAnimationToEnd
- assertVisible: "Dimensions"
